[package]
name = "turbotrade"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-transaction-status = "2.1.0"
chrono = "0.4"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
dirs = "5.0.1"
spl-token = "6.0.0"
